# RIEnet-torch

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
src/rienet_torch/: __init__.py  dtype_utils.py  lag_transform.py  losses.py  ops_layers.py  rnn.py  serialization.py  trainable_layers.py
tests/: conftest.py  test_api_contracts.py  test_audit_edge_cases.py  test_custom_layers.py  test_dtype_and_config_contracts.py  test_dynamic_training.py  test_losses.py  test_mixed_precision.py  test_training_smoke.py
tools/: benchmark_hot_paths.py
